[gd_scene load_steps=4 format=3 uid="uid://cm6nvptf7pos6"]

[ext_resource type="Theme" path="res://text_theme.tres" id="1_1gwaw"]
[ext_resource type="Script" path="res://Scenes/end_screen.gd" id="1_bhpww"]
[ext_resource type="Texture2D" uid="uid://t6qmakdi1v0j" path="res://Textures/Vial/vial_13.PNG" id="2_bhpww"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bhpww")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.270588, 0.137255, 0.878431)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_1gwaw")
text = "Vinally, you escaped the cave!"
horizontal_alignment = 1

[node name="SunlightLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1gwaw")
text = "You absorbed 0/3 Sunlight"
horizontal_alignment = 1

[node name="NutrientLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_1gwaw")
text = "You collected 0/10 Nutrients"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "




"

[node name="VialTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_bhpww")
expand_mode = 5
stretch_mode = 4
